--- a/README
+++ b/README
@@ -1,3 +1,15 @@
+This project is a fork to modernize http://www.jopendocument.org/.
+
+The goals are as follows:
+
+- Migrate from Ant to Maven
+- Update dependencies
+- Support for ODF 1.3 extended
+- Java 11 and later support
+
+Original README is below:
+~~~~~~~~
+
 To compile you need to put iText ( http://www.lowagie.com/iText/download.html )
 and junit4 ( http://www.junit.org/ ) into the lib/ dir. Then just call ant version 1.7+
 (if you want to generate the java5 version pass -Djre5.dir="C:\Program Files\Java\jre1.5.0_15")
